[tool.poetry]
name = "maurice"
version = "0.1.16"
description = "Ship better machine learning projects, faster!"
authors = ["Tomas Pereira de Vasconcelos <tomasvasconcelos1@gmail.com>"]
homepage = "https://github.com/tpvasconcelos/maurice"
repository = "https://github.com/tpvasconcelos/maurice"
#documentation = "..."
#download_url = "..."

readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.8, <4.0.0"
dill = "*"
wrapt = "*"
numpy = "*"
scipy = "*"
scikit-learn = { version = "*", optional = true }
tensorflow = { version = "*", optional = true }
pandas = { version = "*", optional = true }

[tool.poetry.extras]
sklearn = ["scikit-learn"]
tensorflow = ["tensorflow"]
pandas = ["pandas"]
all = ["scikit-learn", "tensorflow", "pandas"]

[tool.poetry.dev-dependencies]
black = "*"
mypy = "*"
matplotlib = "*"
ipython = "*"
deepdiff = "*"
tox = "*"
pytest = "*"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 119
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | \.git-crypt
    | \.cache
    | \.pytest_cache
    | \.idea
    | \.circleci
  )/
  | foo.py           # also separately exclude a file named foo.py in
                     # the root of the project
)
'''
