[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "maurice"
description = "Ship better machine learning projects, faster!"
version = "0.1.16"
authors = [
    { name = "Tomas Pereira de Vasconcelos" }
]
maintainers = [
    { name = "Tomas Pereira de Vasconcelos", email = "tomasvasconcelos1@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
keywords = [
    "machine learning", "cache", "caching", "memoization", "monkey patching", "data science",
]
requires-python = ">=3.8"
dependencies = [
    "dill",
    "wrapt",
    "numpy",
    "scipy",
    'typing-extensions; python_version<"3.10"',
    'importlib-resources; python_version<"3.10"',
]

[project.optional-dependencies]
sklearn = ["scikit-learn"]
tensorflow = ["tensorflow"]
pandas = ["pandas"]
all = ["sklearn", "tensorflow", "pandas"]

[project.urls]
Homepage = "https://github.com/tpvasconcelos/maurice"
"Source code" = "https://github.com/tpvasconcelos/maurice"
"Issue Tracker" = "https://github.com/tpvasconcelos/maurice/issues"

# TODO: Update config based on:
#       https://setuptools.pypa.io/en/latest/userguide/datafiles.html#subdirectory-for-data-files
#[tool.setuptools.package-data]
#"ridgeplot.datasets.data" = ["*.csv"]

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.black]
line-length = 100
include = '\.pyi?$'
