[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "maurice"
description = "Ship better machine learning projects, faster!"
dynamic = ["version"]
authors = [
    { name = "Tomas Pereira de Vasconcelos" }
]
maintainers = [
    { name = "Tomas Pereira de Vasconcelos", email = "tomasvasconcelos1@gmail.com" }
]
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Typing :: Typed",
]
keywords = [
    "machine learning", "cache", "caching", "memoization", "monkey patching", "data science",
]
requires-python = ">=3.10"
dependencies = [
    "dill",
    "wrapt",
    "numpy",
    "scipy",
    "pandas",
    'typing-extensions; python_version<"3.10"',
]

[project.optional-dependencies]
sklearn = ["scikit-learn"]
pandas = ["pandas"]
all = ["scikit-learn", "pandas"]

[project.urls]
Homepage = "https://github.com/tpvasconcelos/maurice"
Documentation = "https://maurice.readthedocs.io/en/stable/"
"Source code" = "https://github.com/tpvasconcelos/maurice"
"Issue Tracker" = "https://github.com/tpvasconcelos/maurice/issues"
Changelog = "https://maurice.readthedocs.io/en/stable/reference/changelog.html"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools_scm]
# PyPi does not support _local_ versioning
# and we want to push X.devM to TestPyPi
# on every merge to the `main` branch
local_scheme = "no-local-version"
